kubernetes/apps/paperless-ngx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.home.mcnees.me`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 8000
  tls:
    secretName: legacy-home-wildcard-tls
